--- a/graph_sampling/visualize/visualize.html
+++ b/graph_sampling/visualize/visualize.html
@@ -12,6 +12,11 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 <div id="chart"></div>
 <script type="text/javascript" src="visualize.js"></script>
+<script>
+    $(function () {
+        visualizeGraph("visualize.json");
+    });
+</script>
 <input type="button" class="btn btn-primary" value="Reload" onclick="location.reload();" />
 </body>
 </html>
