--- a/graph_sampling/visualize/visualize.html
+++ b/graph_sampling/visualize/visualize.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="visualize.js"></script>
 <script>
     $(function () {
-        visualizeGraph("visualize.json");
+        visualizeGraph("twitter_combined.json");
     });
 </script>
 <input type="button" class="btn btn-primary" value="Reload" onclick="location.reload();" />
